--- a/ref/msal-core/classes/_telemetry_apievent_.apievent.html
+++ b/ref/msal-core/classes/_telemetry_apievent_.apievent.html
@@ -138,7 +138,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="_telemetry_telemetryevent_.telemetryevent.html">TelemetryEvent</a>.<a href="_telemetry_telemetryevent_.telemetryevent.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L35">telemetry/ApiEvent.ts:35</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L35">src/telemetry/ApiEvent.ts:35</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -164,7 +164,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_telemetry_telemetryevent_.telemetryevent.html">TelemetryEvent</a>.<a href="_telemetry_telemetryevent_.telemetryevent.html#eventid">eventId</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryEvent.ts#L14">telemetry/TelemetryEvent.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryEvent.ts#L14">src/telemetry/TelemetryEvent.ts:14</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -181,7 +181,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L64">telemetry/ApiEvent.ts:64</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L64">src/telemetry/ApiEvent.ts:64</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -204,7 +204,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L46">telemetry/ApiEvent.ts:46</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L46">src/telemetry/ApiEvent.ts:46</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -227,7 +227,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L54">telemetry/ApiEvent.ts:54</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L54">src/telemetry/ApiEvent.ts:54</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -250,7 +250,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L42">telemetry/ApiEvent.ts:42</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L42">src/telemetry/ApiEvent.ts:42</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -273,7 +273,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L50">telemetry/ApiEvent.ts:50</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L50">src/telemetry/ApiEvent.ts:50</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -296,7 +296,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L84">telemetry/ApiEvent.ts:84</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L84">src/telemetry/ApiEvent.ts:84</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -320,7 +320,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_telemetry_telemetryevent_.telemetryevent.html">TelemetryEvent</a>.<a href="_telemetry_telemetryevent_.telemetryevent.html#eventname">eventName</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryEvent.ts#L45">telemetry/TelemetryEvent.ts:45</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryEvent.ts#L45">src/telemetry/TelemetryEvent.ts:45</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
@@ -337,7 +337,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L78">telemetry/ApiEvent.ts:78</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L78">src/telemetry/ApiEvent.ts:78</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -360,7 +360,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L88">telemetry/ApiEvent.ts:88</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L88">src/telemetry/ApiEvent.ts:88</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -385,7 +385,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_telemetry_telemetryevent_.telemetryevent.html">TelemetryEvent</a>.<a href="_telemetry_telemetryevent_.telemetryevent.html#telemetrycorrelationid">telemetryCorrelationId</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryEvent.ts#L37">telemetry/TelemetryEvent.ts:37</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryEvent.ts#L37">src/telemetry/TelemetryEvent.ts:37</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
@@ -394,7 +394,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_telemetry_telemetryevent_.telemetryevent.html">TelemetryEvent</a>.<a href="_telemetry_telemetryevent_.telemetryevent.html#telemetrycorrelationid">telemetryCorrelationId</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryEvent.ts#L41">telemetry/TelemetryEvent.ts:41</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryEvent.ts#L41">src/telemetry/TelemetryEvent.ts:41</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -417,7 +417,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L58">telemetry/ApiEvent.ts:58</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L58">src/telemetry/ApiEvent.ts:58</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -441,7 +441,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L74">telemetry/ApiEvent.ts:74</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L74">src/telemetry/ApiEvent.ts:74</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
@@ -449,7 +449,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L70">telemetry/ApiEvent.ts:70</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L70">src/telemetry/ApiEvent.ts:70</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -476,7 +476,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_telemetry_telemetryevent_.telemetryevent.html">TelemetryEvent</a>.<a href="_telemetry_telemetryevent_.telemetryevent.html#get">get</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryEvent.ts#L49">telemetry/TelemetryEvent.ts:49</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryEvent.ts#L49">src/telemetry/TelemetryEvent.ts:49</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">object</span></h4>
@@ -494,7 +494,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_telemetry_telemetryevent_.telemetryevent.html">TelemetryEvent</a>.<a href="_telemetry_telemetryevent_.telemetryevent.html#stop">stop</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryEvent.ts#L32">telemetry/TelemetryEvent.ts:32</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryEvent.ts#L32">src/telemetry/TelemetryEvent.ts:32</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -510,7 +510,7 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="../modules/_telemetry_apievent_.html">"telemetry/<wbr>Api<wbr>Event"</a>
+						<a href="../modules/_telemetry_apievent_.html">&quot;telemetry/<wbr>Api<wbr>Event&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -599,6 +599,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -647,7 +648,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
