--- a/ref/msal-core/enums/_telemetry_apievent_.api_code.html
+++ b/ref/msal-core/enums/_telemetry_apievent_.api_code.html
@@ -91,50 +91,50 @@
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="acquiretokenpopup" class="tsd-anchor"></a>
 					<h3>Acquire<wbr>Token<wbr>Popup</h3>
-					<div class="tsd-signature tsd-kind-icon">Acquire<wbr>Token<wbr>Popup<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2003</span></div>
+					<div class="tsd-signature tsd-kind-icon">Acquire<wbr>Token<wbr>Popup<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = 2003</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L20">telemetry/ApiEvent.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L20">src/telemetry/ApiEvent.ts:20</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="acquiretokenredirect" class="tsd-anchor"></a>
 					<h3>Acquire<wbr>Token<wbr>Redirect</h3>
-					<div class="tsd-signature tsd-kind-icon">Acquire<wbr>Token<wbr>Redirect<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2001</span></div>
+					<div class="tsd-signature tsd-kind-icon">Acquire<wbr>Token<wbr>Redirect<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = 2001</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L18">telemetry/ApiEvent.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L18">src/telemetry/ApiEvent.ts:18</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="acquiretokensilent" class="tsd-anchor"></a>
 					<h3>Acquire<wbr>Token<wbr>Silent</h3>
-					<div class="tsd-signature tsd-kind-icon">Acquire<wbr>Token<wbr>Silent<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2002</span></div>
+					<div class="tsd-signature tsd-kind-icon">Acquire<wbr>Token<wbr>Silent<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = 2002</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L19">telemetry/ApiEvent.ts:19</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L19">src/telemetry/ApiEvent.ts:19</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="loginpopup" class="tsd-anchor"></a>
 					<h3>Login<wbr>Popup</h3>
-					<div class="tsd-signature tsd-kind-icon">Login<wbr>Popup<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2005</span></div>
+					<div class="tsd-signature tsd-kind-icon">Login<wbr>Popup<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = 2005</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L22">telemetry/ApiEvent.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L22">src/telemetry/ApiEvent.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="loginredirect" class="tsd-anchor"></a>
 					<h3>Login<wbr>Redirect</h3>
-					<div class="tsd-signature tsd-kind-icon">Login<wbr>Redirect<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2004</span></div>
+					<div class="tsd-signature tsd-kind-icon">Login<wbr>Redirect<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = 2004</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L21">telemetry/ApiEvent.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L21">src/telemetry/ApiEvent.ts:21</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -147,7 +147,7 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="../modules/_telemetry_apievent_.html">"telemetry/<wbr>Api<wbr>Event"</a>
+						<a href="../modules/_telemetry_apievent_.html">&quot;telemetry/<wbr>Api<wbr>Event&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -203,6 +203,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -251,7 +252,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
