--- a/ref/msal-core/interfaces/_telemetry_telemetrytypes_.networkinformation.html
+++ b/ref/msal-core/interfaces/_telemetry_telemetrytypes_.networkinformation.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EventCount | msal</title>
+	<title>NetworkInformation | msal</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -59,10 +59,10 @@
 					<a href="../modules/_telemetry_telemetrytypes_.html">&quot;telemetry/TelemetryTypes&quot;</a>
 				</li>
 				<li>
-					<a href="_telemetry_telemetrytypes_.eventcount.html">EventCount</a>
+					<a href="_telemetry_telemetrytypes_.networkinformation.html">NetworkInformation</a>
 				</li>
 			</ul>
-			<h1>Interface EventCount</h1>
+			<h1>Interface NetworkInformation</h1>
 		</div>
 	</div>
 </header>
@@ -73,13 +73,35 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">EventCount</span>
+						<span class="target">NetworkInformation</span>
 					</li>
 				</ul>
 			</section>
-			<section class="tsd-panel tsd-kind-interface tsd-parent-kind-external-module">
-				<h3 class="tsd-before-signature">Indexable</h3>
-				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>eventName: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">number</span></div>
+			<section class="tsd-panel-group tsd-index-group">
+				<h2>Index</h2>
+				<section class="tsd-panel tsd-index-panel">
+					<div class="tsd-index-content">
+						<section class="tsd-index-section ">
+							<h3>Properties</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_telemetry_telemetrytypes_.networkinformation.html#connectionspeed" class="tsd-kind-icon">connection<wbr>Speed</a></li>
+							</ul>
+						</section>
+					</div>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group ">
+				<h2>Properties</h2>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="connectionspeed" class="tsd-anchor"></a>
+					<h3>connection<wbr>Speed</h3>
+					<div class="tsd-signature tsd-kind-icon">connection<wbr>Speed<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryTypes.ts#L27">src/telemetry/TelemetryTypes.ts:27</a></li>
+						</ul>
+					</aside>
+				</section>
 			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
@@ -98,22 +120,27 @@
 					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
 						<a href="_telemetry_telemetrytypes_.completedevents.html" class="tsd-kind-icon">Completed<wbr>Events</a>
 					</li>
-				</ul>
-				<ul class="current">
-					<li class="current tsd-kind-interface tsd-parent-kind-external-module">
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
 						<a href="_telemetry_telemetrytypes_.eventcount.html" class="tsd-kind-icon">Event<wbr>Count</a>
 					</li>
-				</ul>
-				<ul class="after-current">
 					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
 						<a href="_telemetry_telemetrytypes_.eventcountbycorrelationid.html" class="tsd-kind-icon">Event<wbr>Count<wbr>ByCorrelation<wbr>Id</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
 						<a href="_telemetry_telemetrytypes_.inprogressevents.html" class="tsd-kind-icon">In<wbr>Progress<wbr>Events</a>
 					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
+				</ul>
+				<ul class="current">
+					<li class="current tsd-kind-interface tsd-parent-kind-external-module">
 						<a href="_telemetry_telemetrytypes_.networkinformation.html" class="tsd-kind-icon">Network<wbr>Information</a>
+						<ul>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_telemetry_telemetrytypes_.networkinformation.html#connectionspeed" class="tsd-kind-icon">connection<wbr>Speed</a>
+							</li>
+						</ul>
 					</li>
+				</ul>
+				<ul class="after-current">
 					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
 						<a href="_telemetry_telemetrytypes_.telemetryconfig.html" class="tsd-kind-icon">Telemetry<wbr>Config</a>
 					</li>
