--- a/ref/msal-core/interfaces/_useragentapplication_.__global.window.html
+++ b/ref/msal-core/interfaces/_useragentapplication_.__global.window.html
@@ -84,112 +84,127 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section tsd-is-not-exported">
+						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="_useragentapplication_.__global.window.html#customevent" class="tsd-kind-icon">Custom<wbr>Event</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="_useragentapplication_.__global.window.html#event" class="tsd-kind-icon">Event</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="_useragentapplication_.__global.window.html#activerenewals" class="tsd-kind-icon">active<wbr>Renewals</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="_useragentapplication_.__global.window.html#callbackmappedtorenewstates" class="tsd-kind-icon">callback<wbr>Mapped<wbr>ToRenew<wbr>States</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="_useragentapplication_.__global.window.html#msal" class="tsd-kind-icon">msal</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="_useragentapplication_.__global.window.html#openedwindows" class="tsd-kind-icon">opened<wbr>Windows</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="_useragentapplication_.__global.window.html#promisemappedtorenewstates" class="tsd-kind-icon">promise<wbr>Mapped<wbr>ToRenew<wbr>States</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="_useragentapplication_.__global.window.html#renewstates" class="tsd-kind-icon">renew<wbr>States</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="_useragentapplication_.__global.window.html#requesttype" class="tsd-kind-icon">request<wbr>Type</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_useragentapplication_.__global.window.html#customevent" class="tsd-kind-icon">Custom<wbr>Event</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_useragentapplication_.__global.window.html#event" class="tsd-kind-icon">Event</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_useragentapplication_.__global.window.html#activerenewals" class="tsd-kind-icon">active<wbr>Renewals</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_useragentapplication_.__global.window.html#callbackmappedtorenewstates" class="tsd-kind-icon">callback<wbr>Mapped<wbr>ToRenew<wbr>States</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_useragentapplication_.__global.window.html#msal" class="tsd-kind-icon">msal</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_useragentapplication_.__global.window.html#openedwindows" class="tsd-kind-icon">opened<wbr>Windows</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_useragentapplication_.__global.window.html#promisemappedtorenewstates" class="tsd-kind-icon">promise<wbr>Mapped<wbr>ToRenew<wbr>States</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_useragentapplication_.__global.window.html#renewstates" class="tsd-kind-icon">renew<wbr>States</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_useragentapplication_.__global.window.html#requesttype" class="tsd-kind-icon">request<wbr>Type</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
+			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="customevent" class="tsd-anchor"></a>
 					<h3>Custom<wbr>Event</h3>
 					<div class="tsd-signature tsd-kind-icon">Custom<wbr>Event<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">CustomEvent</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/UserAgentApplication.ts#L53">UserAgentApplication.ts:53</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/UserAgentApplication.ts#L55">src/UserAgentApplication.ts:55</a></li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="event" class="tsd-anchor"></a>
 					<h3>Event</h3>
 					<div class="tsd-signature tsd-kind-icon">Event<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Event</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/UserAgentApplication.ts#L54">UserAgentApplication.ts:54</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/UserAgentApplication.ts#L56">src/UserAgentApplication.ts:56</a></li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="activerenewals" class="tsd-anchor"></a>
 					<h3>active<wbr>Renewals</h3>
-					<div class="tsd-signature tsd-kind-icon">active<wbr>Renewals<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">__type</span></div>
+					<div class="tsd-signature tsd-kind-icon">active<wbr>Renewals<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/UserAgentApplication.ts#L55">UserAgentApplication.ts:55</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/UserAgentApplication.ts#L57">src/UserAgentApplication.ts:57</a></li>
 						</ul>
 					</aside>
+					<div class="tsd-type-declaration">
+						<h4>Type declaration</h4>
+						<ul class="tsd-parameters">
+						</ul>
+					</div>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="callbackmappedtorenewstates" class="tsd-anchor"></a>
 					<h3>callback<wbr>Mapped<wbr>ToRenew<wbr>States</h3>
-					<div class="tsd-signature tsd-kind-icon">callback<wbr>Mapped<wbr>ToRenew<wbr>States<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">__type</span></div>
+					<div class="tsd-signature tsd-kind-icon">callback<wbr>Mapped<wbr>ToRenew<wbr>States<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/UserAgentApplication.ts#L57">UserAgentApplication.ts:57</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/UserAgentApplication.ts#L59">src/UserAgentApplication.ts:59</a></li>
 						</ul>
 					</aside>
+					<div class="tsd-type-declaration">
+						<h4>Type declaration</h4>
+						<ul class="tsd-parameters">
+						</ul>
+					</div>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="msal" class="tsd-anchor"></a>
 					<h3>msal</h3>
 					<div class="tsd-signature tsd-kind-icon">msal<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/UserAgentApplication.ts#L52">UserAgentApplication.ts:52</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/UserAgentApplication.ts#L54">src/UserAgentApplication.ts:54</a></li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="openedwindows" class="tsd-anchor"></a>
 					<h3>opened<wbr>Windows</h3>
-					<div class="tsd-signature tsd-kind-icon">opened<wbr>Windows<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">Window</span><span class="tsd-signature-symbol">&gt;</span></div>
+					<div class="tsd-signature tsd-kind-icon">opened<wbr>Windows<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><a href="_useragentapplication_.__global.window.html" class="tsd-signature-type">Window</a><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/UserAgentApplication.ts#L59">UserAgentApplication.ts:59</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/UserAgentApplication.ts#L61">src/UserAgentApplication.ts:61</a></li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="promisemappedtorenewstates" class="tsd-anchor"></a>
 					<h3>promise<wbr>Mapped<wbr>ToRenew<wbr>States</h3>
-					<div class="tsd-signature tsd-kind-icon">promise<wbr>Mapped<wbr>ToRenew<wbr>States<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">__type</span></div>
+					<div class="tsd-signature tsd-kind-icon">promise<wbr>Mapped<wbr>ToRenew<wbr>States<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/UserAgentApplication.ts#L58">UserAgentApplication.ts:58</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/UserAgentApplication.ts#L60">src/UserAgentApplication.ts:60</a></li>
 						</ul>
 					</aside>
+					<div class="tsd-type-declaration">
+						<h4>Type declaration</h4>
+						<ul class="tsd-parameters">
+						</ul>
+					</div>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="renewstates" class="tsd-anchor"></a>
 					<h3>renew<wbr>States</h3>
 					<div class="tsd-signature tsd-kind-icon">renew<wbr>States<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/UserAgentApplication.ts#L56">UserAgentApplication.ts:56</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/UserAgentApplication.ts#L58">src/UserAgentApplication.ts:58</a></li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="requesttype" class="tsd-anchor"></a>
 					<h3>request<wbr>Type</h3>
 					<div class="tsd-signature tsd-kind-icon">request<wbr>Type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/UserAgentApplication.ts#L60">UserAgentApplication.ts:60</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/UserAgentApplication.ts#L62">src/UserAgentApplication.ts:62</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -202,7 +217,7 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="../modules/_useragentapplication_.html">"<wbr>User<wbr>Agent<wbr>Application"</a>
+						<a href="../modules/_useragentapplication_.html">&quot;<wbr>User<wbr>Agent<wbr>Application&quot;</a>
 						<ul>
 							<li class="current tsd-kind-module tsd-parent-kind-external-module tsd-is-not-exported">
 								<a href="../modules/_useragentapplication_.__global.html">__global</a>
@@ -215,34 +230,34 @@
 				<ul class="before-current">
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+					<li class="current tsd-kind-interface tsd-parent-kind-module">
 						<a href="_useragentapplication_.__global.window.html" class="tsd-kind-icon">Window</a>
 						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_useragentapplication_.__global.window.html#customevent" class="tsd-kind-icon">Custom<wbr>Event</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_useragentapplication_.__global.window.html#event" class="tsd-kind-icon">Event</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_useragentapplication_.__global.window.html#activerenewals" class="tsd-kind-icon">active<wbr>Renewals</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_useragentapplication_.__global.window.html#callbackmappedtorenewstates" class="tsd-kind-icon">callback<wbr>Mapped<wbr>ToRenew<wbr>States</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_useragentapplication_.__global.window.html#msal" class="tsd-kind-icon">msal</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_useragentapplication_.__global.window.html#openedwindows" class="tsd-kind-icon">opened<wbr>Windows</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_useragentapplication_.__global.window.html#promisemappedtorenewstates" class="tsd-kind-icon">promise<wbr>Mapped<wbr>ToRenew<wbr>States</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_useragentapplication_.__global.window.html#renewstates" class="tsd-kind-icon">renew<wbr>States</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_useragentapplication_.__global.window.html#requesttype" class="tsd-kind-icon">request<wbr>Type</a>
 							</li>
 						</ul>
@@ -266,6 +281,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -314,7 +330,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
