--- a/ref/msal-core/modules/_error_interactionrequiredautherror_.html
+++ b/ref/msal-core/modules/_error_interactionrequiredautherror_.html
@@ -93,7 +93,7 @@
 					<div class="tsd-signature tsd-kind-icon">Interaction<wbr>Required<wbr>Auth<wbr>Error<wbr>Message<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/error/InteractionRequiredAuthError.ts#L8">error/InteractionRequiredAuthError.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/error/InteractionRequiredAuthError.ts#L8">src/error/InteractionRequiredAuthError.ts:8</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-object-literal tsd-parent-kind-object-literal">
@@ -102,16 +102,16 @@
 						<div class="tsd-signature tsd-kind-icon">consent<wbr>Required<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/error/InteractionRequiredAuthError.ts#L12">error/InteractionRequiredAuthError.ts:12</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/error/InteractionRequiredAuthError.ts#L12">src/error/InteractionRequiredAuthError.ts:12</a></li>
 							</ul>
 						</aside>
 						<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 							<a name="interactionrequiredautherrormessage.consentrequired.code" class="tsd-anchor"></a>
 							<h3>code</h3>
-							<div class="tsd-signature tsd-kind-icon">code<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;&quot;consent_required&quot;</span></div>
+							<div class="tsd-signature tsd-kind-icon">code<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;consent_required&quot;</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/error/InteractionRequiredAuthError.ts#L13">error/InteractionRequiredAuthError.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/error/InteractionRequiredAuthError.ts#L13">src/error/InteractionRequiredAuthError.ts:13</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -122,16 +122,16 @@
 						<div class="tsd-signature tsd-kind-icon">interaction<wbr>Required<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/error/InteractionRequiredAuthError.ts#L9">error/InteractionRequiredAuthError.ts:9</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/error/InteractionRequiredAuthError.ts#L9">src/error/InteractionRequiredAuthError.ts:9</a></li>
 							</ul>
 						</aside>
 						<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 							<a name="interactionrequiredautherrormessage.interactionrequired.code-1" class="tsd-anchor"></a>
 							<h3>code</h3>
-							<div class="tsd-signature tsd-kind-icon">code<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;&quot;interaction_required&quot;</span></div>
+							<div class="tsd-signature tsd-kind-icon">code<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;interaction_required&quot;</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/error/InteractionRequiredAuthError.ts#L10">error/InteractionRequiredAuthError.ts:10</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/error/InteractionRequiredAuthError.ts#L10">src/error/InteractionRequiredAuthError.ts:10</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -142,16 +142,16 @@
 						<div class="tsd-signature tsd-kind-icon">login<wbr>Required<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/error/InteractionRequiredAuthError.ts#L15">error/InteractionRequiredAuthError.ts:15</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/error/InteractionRequiredAuthError.ts#L15">src/error/InteractionRequiredAuthError.ts:15</a></li>
 							</ul>
 						</aside>
 						<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 							<a name="interactionrequiredautherrormessage.loginrequired.code-2" class="tsd-anchor"></a>
 							<h3>code</h3>
-							<div class="tsd-signature tsd-kind-icon">code<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;&quot;login_required&quot;</span></div>
+							<div class="tsd-signature tsd-kind-icon">code<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;login_required&quot;</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/error/InteractionRequiredAuthError.ts#L16">error/InteractionRequiredAuthError.ts:16</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/error/InteractionRequiredAuthError.ts#L16">src/error/InteractionRequiredAuthError.ts:16</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -166,7 +166,7 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="_error_interactionrequiredautherror_.html">"error/<wbr>Interaction<wbr>Required<wbr>Auth<wbr>Error"</a>
+						<a href="_error_interactionrequiredautherror_.html">&quot;error/<wbr>Interaction<wbr>Required<wbr>Auth<wbr>Error&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -195,6 +195,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -243,7 +244,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
