--- a/ref/msal-core/modules/_telemetry_cacheevent_.html
+++ b/ref/msal-core/modules/_telemetry_cacheevent_.html
@@ -102,10 +102,10 @@
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
 					<a name="token_type_key" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagConst">Const</span> TOKEN_<wbr>TYPE_<wbr>KEY</h3>
-					<div class="tsd-signature tsd-kind-icon">TOKEN_<wbr>TYPE_<wbr>KEY<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;token_type&quot;)</span></div>
+					<div class="tsd-signature tsd-kind-icon">TOKEN_<wbr>TYPE_<wbr>KEY<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;token_type&quot;)</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L20">telemetry/CacheEvent.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L20">src/telemetry/CacheEvent.ts:20</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -118,66 +118,66 @@
 					<div class="tsd-signature tsd-kind-icon">CACHE_<wbr>EVENT_<wbr>TYPES<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L5">telemetry/CacheEvent.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L5">src/telemetry/CacheEvent.ts:5</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="cache_event_types.tokencacheafteraccess" class="tsd-anchor"></a>
 						<h3>Token<wbr>Cache<wbr>After<wbr>Access</h3>
-						<div class="tsd-signature tsd-kind-icon">Token<wbr>Cache<wbr>After<wbr>Access<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;token_cache_after_access&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">Token<wbr>Cache<wbr>After<wbr>Access<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;token_cache_after_access&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L9">telemetry/CacheEvent.ts:9</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L9">src/telemetry/CacheEvent.ts:9</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="cache_event_types.tokencachebeforeaccess" class="tsd-anchor"></a>
 						<h3>Token<wbr>Cache<wbr>Before<wbr>Access</h3>
-						<div class="tsd-signature tsd-kind-icon">Token<wbr>Cache<wbr>Before<wbr>Access<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;token_cache_before_access&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">Token<wbr>Cache<wbr>Before<wbr>Access<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;token_cache_before_access&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L8">telemetry/CacheEvent.ts:8</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L8">src/telemetry/CacheEvent.ts:8</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="cache_event_types.tokencachebeforewrite" class="tsd-anchor"></a>
 						<h3>Token<wbr>Cache<wbr>Before<wbr>Write</h3>
-						<div class="tsd-signature tsd-kind-icon">Token<wbr>Cache<wbr>Before<wbr>Write<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;token_cache_before_write&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">Token<wbr>Cache<wbr>Before<wbr>Write<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;token_cache_before_write&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L10">telemetry/CacheEvent.ts:10</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L10">src/telemetry/CacheEvent.ts:10</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="cache_event_types.tokencachedelete" class="tsd-anchor"></a>
 						<h3>Token<wbr>Cache<wbr>Delete</h3>
-						<div class="tsd-signature tsd-kind-icon">Token<wbr>Cache<wbr>Delete<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;token_cache_delete&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">Token<wbr>Cache<wbr>Delete<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;token_cache_delete&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L11">telemetry/CacheEvent.ts:11</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L11">src/telemetry/CacheEvent.ts:11</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="cache_event_types.tokencachelookup" class="tsd-anchor"></a>
 						<h3>Token<wbr>Cache<wbr>Lookup</h3>
-						<div class="tsd-signature tsd-kind-icon">Token<wbr>Cache<wbr>Lookup<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;token_cache_lookup&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">Token<wbr>Cache<wbr>Lookup<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;token_cache_lookup&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L6">telemetry/CacheEvent.ts:6</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L6">src/telemetry/CacheEvent.ts:6</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="cache_event_types.tokencachewrite" class="tsd-anchor"></a>
 						<h3>Token<wbr>Cache<wbr>Write</h3>
-						<div class="tsd-signature tsd-kind-icon">Token<wbr>Cache<wbr>Write<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;token_cache_write&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">Token<wbr>Cache<wbr>Write<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;token_cache_write&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L7">telemetry/CacheEvent.ts:7</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L7">src/telemetry/CacheEvent.ts:7</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -191,7 +191,7 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="_telemetry_cacheevent_.html">"telemetry/<wbr>Cache<wbr>Event"</a>
+						<a href="_telemetry_cacheevent_.html">&quot;telemetry/<wbr>Cache<wbr>Event&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -226,6 +226,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -274,7 +275,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
