--- a/ref/msal-core/modules/_telemetry_telemetrytypes_.html
+++ b/ref/msal-core/modules/_telemetry_telemetrytypes_.html
@@ -77,6 +77,7 @@
 								<li class="tsd-kind-interface tsd-parent-kind-external-module"><a href="../interfaces/_telemetry_telemetrytypes_.eventcount.html" class="tsd-kind-icon">Event<wbr>Count</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-external-module"><a href="../interfaces/_telemetry_telemetrytypes_.eventcountbycorrelationid.html" class="tsd-kind-icon">Event<wbr>Count<wbr>ByCorrelation<wbr>Id</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-external-module"><a href="../interfaces/_telemetry_telemetrytypes_.inprogressevents.html" class="tsd-kind-icon">In<wbr>Progress<wbr>Events</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-external-module"><a href="../interfaces/_telemetry_telemetrytypes_.networkinformation.html" class="tsd-kind-icon">Network<wbr>Information</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-external-module"><a href="../interfaces/_telemetry_telemetrytypes_.telemetryconfig.html" class="tsd-kind-icon">Telemetry<wbr>Config</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-external-module"><a href="../interfaces/_telemetry_telemetrytypes_.telemetryplatform.html" class="tsd-kind-icon">Telemetry<wbr>Platform</a></li>
 							</ul>
@@ -95,17 +96,17 @@
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-external-module">
 					<a name="telemetryemitter" class="tsd-anchor"></a>
 					<h3>Telemetry<wbr>Emitter</h3>
-					<div class="tsd-signature tsd-kind-icon">Telemetry<wbr>Emitter<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
+					<div class="tsd-signature tsd-kind-icon">Telemetry<wbr>Emitter<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>events<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryTypes.ts#L8">telemetry/TelemetryTypes.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryTypes.ts#L8">src/telemetry/TelemetryTypes.ts:8</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
 						<h4>Type declaration</h4>
 						<ul class="tsd-parameters">
 							<li class="tsd-parameter-siganture">
-								<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-type-alias tsd-is-not-exported">
+								<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-type-alias">
 									<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>events<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 								</ul>
 								<ul class="tsd-descriptions">
@@ -132,7 +133,7 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="_telemetry_telemetrytypes_.html">"telemetry/<wbr>Telemetry<wbr>Types"</a>
+						<a href="_telemetry_telemetrytypes_.html">&quot;telemetry/<wbr>Telemetry<wbr>Types&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -149,6 +150,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
 						<a href="../interfaces/_telemetry_telemetrytypes_.inprogressevents.html" class="tsd-kind-icon">In<wbr>Progress<wbr>Events</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
+						<a href="../interfaces/_telemetry_telemetrytypes_.networkinformation.html" class="tsd-kind-icon">Network<wbr>Information</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
 						<a href="../interfaces/_telemetry_telemetrytypes_.telemetryconfig.html" class="tsd-kind-icon">Telemetry<wbr>Config</a>
@@ -176,6 +180,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -224,7 +229,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
