--- a/ref/msal-core/enums/_telemetry_cacheevent_.token_types.html
+++ b/ref/msal-core/enums/_telemetry_cacheevent_.token_types.html
@@ -89,30 +89,30 @@
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="account" class="tsd-anchor"></a>
 					<h3>ACCOUNT</h3>
-					<div class="tsd-signature tsd-kind-icon">ACCOUNT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;account&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">ACCOUNT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;account&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L17">telemetry/CacheEvent.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L17">src/telemetry/CacheEvent.ts:17</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="at" class="tsd-anchor"></a>
 					<h3>AT</h3>
-					<div class="tsd-signature tsd-kind-icon">AT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;at&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">AT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;at&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L15">telemetry/CacheEvent.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L15">src/telemetry/CacheEvent.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="id" class="tsd-anchor"></a>
 					<h3>ID</h3>
-					<div class="tsd-signature tsd-kind-icon">ID<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;id&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">ID<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;id&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L16">telemetry/CacheEvent.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/CacheEvent.ts#L16">src/telemetry/CacheEvent.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -125,7 +125,7 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="../modules/_telemetry_cacheevent_.html">"telemetry/<wbr>Cache<wbr>Event"</a>
+						<a href="../modules/_telemetry_cacheevent_.html">&quot;telemetry/<wbr>Cache<wbr>Event&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -175,6 +175,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -223,7 +224,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
