--- a/ref/msal-core/enums/_utils_constants_.errorcachekeys.html
+++ b/ref/msal-core/enums/_utils_constants_.errorcachekeys.html
@@ -89,30 +89,30 @@
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="error" class="tsd-anchor"></a>
 					<h3>ERROR</h3>
-					<div class="tsd-signature tsd-kind-icon">ERROR<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;error&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">ERROR<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;error&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L97">utils/Constants.ts:97</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L97">src/utils/Constants.ts:97</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="error_desc" class="tsd-anchor"></a>
 					<h3>ERROR_<wbr>DESC</h3>
-					<div class="tsd-signature tsd-kind-icon">ERROR_<wbr>DESC<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;error.description&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">ERROR_<wbr>DESC<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;error.description&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L98">utils/Constants.ts:98</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L98">src/utils/Constants.ts:98</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="login_error" class="tsd-anchor"></a>
 					<h3>LOGIN_<wbr>ERROR</h3>
-					<div class="tsd-signature tsd-kind-icon">LOGIN_<wbr>ERROR<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;login.error&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">LOGIN_<wbr>ERROR<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;login.error&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L96">utils/Constants.ts:96</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L96">src/utils/Constants.ts:96</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -125,7 +125,7 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="../modules/_utils_constants_.html">"utils/<wbr>Constants"</a>
+						<a href="../modules/_utils_constants_.html">&quot;utils/<wbr>Constants&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -181,6 +181,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -229,7 +230,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
