--- a/ref/msal-core/enums/_utils_constants_.persistentcachekeys.html
+++ b/ref/msal-core/enums/_utils_constants_.persistentcachekeys.html
@@ -88,20 +88,20 @@
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="client_info" class="tsd-anchor"></a>
 					<h3>CLIENT_<wbr>INFO</h3>
-					<div class="tsd-signature tsd-kind-icon">CLIENT_<wbr>INFO<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;client.info&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">CLIENT_<wbr>INFO<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;client.info&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L92">utils/Constants.ts:92</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L92">src/utils/Constants.ts:92</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="idtoken" class="tsd-anchor"></a>
 					<h3>IDTOKEN</h3>
-					<div class="tsd-signature tsd-kind-icon">IDTOKEN<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;idtoken&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">IDTOKEN<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;idtoken&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L91">utils/Constants.ts:91</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L91">src/utils/Constants.ts:91</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -114,7 +114,7 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="../modules/_utils_constants_.html">"utils/<wbr>Constants"</a>
+						<a href="../modules/_utils_constants_.html">&quot;utils/<wbr>Constants&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -167,6 +167,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -215,7 +216,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
