--- a/ref/msal-core/enums/_utils_constants_.serverhashparamkeys.html
+++ b/ref/msal-core/enums/_utils_constants_.serverhashparamkeys.html
@@ -101,80 +101,80 @@
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="access_token" class="tsd-anchor"></a>
 					<h3>ACCESS_<wbr>TOKEN</h3>
-					<div class="tsd-signature tsd-kind-icon">ACCESS_<wbr>TOKEN<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;access_token&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">ACCESS_<wbr>TOKEN<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;access_token&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L63">utils/Constants.ts:63</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L64">src/utils/Constants.ts:64</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="client_info" class="tsd-anchor"></a>
 					<h3>CLIENT_<wbr>INFO</h3>
-					<div class="tsd-signature tsd-kind-icon">CLIENT_<wbr>INFO<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;client_info&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">CLIENT_<wbr>INFO<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;client_info&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L67">utils/Constants.ts:67</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L68">src/utils/Constants.ts:68</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="error" class="tsd-anchor"></a>
 					<h3>ERROR</h3>
-					<div class="tsd-signature tsd-kind-icon">ERROR<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;error&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">ERROR<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;error&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L61">utils/Constants.ts:61</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L62">src/utils/Constants.ts:62</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="error_description" class="tsd-anchor"></a>
 					<h3>ERROR_<wbr>DESCRIPTION</h3>
-					<div class="tsd-signature tsd-kind-icon">ERROR_<wbr>DESCRIPTION<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;error_description&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">ERROR_<wbr>DESCRIPTION<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;error_description&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L62">utils/Constants.ts:62</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L63">src/utils/Constants.ts:63</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="expires_in" class="tsd-anchor"></a>
 					<h3>EXPIRES_<wbr>IN</h3>
-					<div class="tsd-signature tsd-kind-icon">EXPIRES_<wbr>IN<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;expires_in&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">EXPIRES_<wbr>IN<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;expires_in&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L65">utils/Constants.ts:65</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L66">src/utils/Constants.ts:66</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="id_token" class="tsd-anchor"></a>
 					<h3>ID_<wbr>TOKEN</h3>
-					<div class="tsd-signature tsd-kind-icon">ID_<wbr>TOKEN<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;id_token&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">ID_<wbr>TOKEN<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;id_token&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L64">utils/Constants.ts:64</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L65">src/utils/Constants.ts:65</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="scope" class="tsd-anchor"></a>
 					<h3>SCOPE</h3>
-					<div class="tsd-signature tsd-kind-icon">SCOPE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;scope&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">SCOPE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;scope&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L60">utils/Constants.ts:60</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L61">src/utils/Constants.ts:61</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="session_state" class="tsd-anchor"></a>
 					<h3>SESSION_<wbr>STATE</h3>
-					<div class="tsd-signature tsd-kind-icon">SESSION_<wbr>STATE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;&quot;session_state&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">SESSION_<wbr>STATE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;session_state&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L66">utils/Constants.ts:66</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L67">src/utils/Constants.ts:67</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -187,7 +187,7 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="../modules/_utils_constants_.html">"utils/<wbr>Constants"</a>
+						<a href="../modules/_utils_constants_.html">&quot;utils/<wbr>Constants&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -258,6 +258,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -306,7 +307,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
