--- a/ref/msal-core/interfaces/_telemetry_telemetrytypes_.telemetryconfig.html
+++ b/ref/msal-core/interfaces/_telemetry_telemetrytypes_.telemetryconfig.html
@@ -100,7 +100,7 @@
 					<div class="tsd-signature tsd-kind-icon">client<wbr>Id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryTypes.ts#L21">telemetry/TelemetryTypes.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryTypes.ts#L22">src/telemetry/TelemetryTypes.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -110,7 +110,7 @@
 					<div class="tsd-signature tsd-kind-icon">only<wbr>Send<wbr>Failure<wbr>Telemetry<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryTypes.ts#L20">telemetry/TelemetryTypes.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryTypes.ts#L21">src/telemetry/TelemetryTypes.ts:21</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -120,7 +120,7 @@
 					<div class="tsd-signature tsd-kind-icon">platform<span class="tsd-signature-symbol">:</span> <a href="_telemetry_telemetrytypes_.telemetryplatform.html" class="tsd-signature-type">TelemetryPlatform</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryTypes.ts#L19">telemetry/TelemetryTypes.ts:19</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryTypes.ts#L20">src/telemetry/TelemetryTypes.ts:20</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -133,7 +133,7 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="../modules/_telemetry_telemetrytypes_.html">"telemetry/<wbr>Telemetry<wbr>Types"</a>
+						<a href="../modules/_telemetry_telemetrytypes_.html">&quot;telemetry/<wbr>Telemetry<wbr>Types&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -150,6 +150,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
 						<a href="_telemetry_telemetrytypes_.inprogressevents.html" class="tsd-kind-icon">In<wbr>Progress<wbr>Events</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
+						<a href="_telemetry_telemetrytypes_.networkinformation.html" class="tsd-kind-icon">Network<wbr>Information</a>
 					</li>
 				</ul>
 				<ul class="current">
@@ -192,6 +195,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -240,7 +244,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
