--- a/ref/msal-core/interfaces/_telemetry_telemetrytypes_.telemetryplatform.html
+++ b/ref/msal-core/interfaces/_telemetry_telemetrytypes_.telemetryplatform.html
@@ -86,6 +86,7 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_telemetry_telemetrytypes_.telemetryplatform.html#applicationname" class="tsd-kind-icon">application<wbr>Name</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_telemetry_telemetrytypes_.telemetryplatform.html#applicationversion" class="tsd-kind-icon">application<wbr>Version</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_telemetry_telemetrytypes_.telemetryplatform.html#networkinformation" class="tsd-kind-icon">network<wbr>Information</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_telemetry_telemetrytypes_.telemetryplatform.html#sdk" class="tsd-kind-icon">sdk</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_telemetry_telemetrytypes_.telemetryplatform.html#sdkversion" class="tsd-kind-icon">sdk<wbr>Version</a></li>
 							</ul>
@@ -101,7 +102,7 @@
 					<div class="tsd-signature tsd-kind-icon">application<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryTypes.ts#L14">telemetry/TelemetryTypes.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryTypes.ts#L14">src/telemetry/TelemetryTypes.ts:14</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -111,27 +112,37 @@
 					<div class="tsd-signature tsd-kind-icon">application<wbr>Version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryTypes.ts#L15">telemetry/TelemetryTypes.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryTypes.ts#L15">src/telemetry/TelemetryTypes.ts:15</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="networkinformation" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> network<wbr>Information</h3>
+					<div class="tsd-signature tsd-kind-icon">network<wbr>Information<span class="tsd-signature-symbol">:</span> <a href="_telemetry_telemetrytypes_.networkinformation.html" class="tsd-signature-type">NetworkInformation</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryTypes.ts#L16">src/telemetry/TelemetryTypes.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="sdk" class="tsd-anchor"></a>
-					<h3>sdk</h3>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> sdk</h3>
 					<div class="tsd-signature tsd-kind-icon">sdk<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryTypes.ts#L12">telemetry/TelemetryTypes.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryTypes.ts#L12">src/telemetry/TelemetryTypes.ts:12</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="sdkversion" class="tsd-anchor"></a>
-					<h3>sdk<wbr>Version</h3>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> sdk<wbr>Version</h3>
 					<div class="tsd-signature tsd-kind-icon">sdk<wbr>Version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryTypes.ts#L13">telemetry/TelemetryTypes.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryTypes.ts#L13">src/telemetry/TelemetryTypes.ts:13</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -144,7 +155,7 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="../modules/_telemetry_telemetrytypes_.html">"telemetry/<wbr>Telemetry<wbr>Types"</a>
+						<a href="../modules/_telemetry_telemetrytypes_.html">&quot;telemetry/<wbr>Telemetry<wbr>Types&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -163,6 +174,9 @@
 						<a href="_telemetry_telemetrytypes_.inprogressevents.html" class="tsd-kind-icon">In<wbr>Progress<wbr>Events</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
+						<a href="_telemetry_telemetrytypes_.networkinformation.html" class="tsd-kind-icon">Network<wbr>Information</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
 						<a href="_telemetry_telemetrytypes_.telemetryconfig.html" class="tsd-kind-icon">Telemetry<wbr>Config</a>
 					</li>
 				</ul>
@@ -175,6 +189,9 @@
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_telemetry_telemetrytypes_.telemetryplatform.html#applicationversion" class="tsd-kind-icon">application<wbr>Version</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_telemetry_telemetrytypes_.telemetryplatform.html#networkinformation" class="tsd-kind-icon">network<wbr>Information</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_telemetry_telemetrytypes_.telemetryplatform.html#sdk" class="tsd-kind-icon">sdk</a>
@@ -206,6 +223,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -254,7 +272,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
