--- a/ref/msal-core/modules/_index_.html
+++ b/ref/msal-core/modules/_index_.html
@@ -66,6 +66,99 @@
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
+			<section class="tsd-panel-group tsd-index-group">
+				<h2>Index</h2>
+				<section class="tsd-panel tsd-index-panel">
+					<div class="tsd-index-content">
+						<section class="tsd-index-section ">
+							<h3>References</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#account" class="tsd-kind-icon">Account</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#autherror" class="tsd-kind-icon">Auth<wbr>Error</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#authresponse" class="tsd-kind-icon">Auth<wbr>Response</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#authenticationparameters" class="tsd-kind-icon">Authentication<wbr>Parameters</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#cachelocation" class="tsd-kind-icon">Cache<wbr>Location</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#clientautherror" class="tsd-kind-icon">Client<wbr>Auth<wbr>Error</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#clientconfigurationerror" class="tsd-kind-icon">Client<wbr>Configuration<wbr>Error</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#configuration" class="tsd-kind-icon">Configuration</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#interactionrequiredautherror" class="tsd-kind-icon">Interaction<wbr>Required<wbr>Auth<wbr>Error</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#loglevel" class="tsd-kind-icon">Log<wbr>Level</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#logger" class="tsd-kind-icon">Logger</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#servererror" class="tsd-kind-icon">Server<wbr>Error</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#useragentapplication" class="tsd-kind-icon">User<wbr>Agent<wbr>Application</a></li>
+							</ul>
+						</section>
+					</div>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group ">
+				<h2>References</h2>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="account" class="tsd-anchor"></a>
+					<h3>Account</h3>
+					Re-exports <a href="../classes/_account_.account.html">Account</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="autherror" class="tsd-anchor"></a>
+					<h3>Auth<wbr>Error</h3>
+					Re-exports <a href="../classes/_error_autherror_.autherror.html">AuthError</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="authresponse" class="tsd-anchor"></a>
+					<h3>Auth<wbr>Response</h3>
+					Re-exports <a href="_authresponse_.html#authresponse">AuthResponse</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="authenticationparameters" class="tsd-anchor"></a>
+					<h3>Authentication<wbr>Parameters</h3>
+					Re-exports <a href="_authenticationparameters_.html#authenticationparameters">AuthenticationParameters</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="cachelocation" class="tsd-anchor"></a>
+					<h3>Cache<wbr>Location</h3>
+					Re-exports <a href="_configuration_.html#cachelocation">CacheLocation</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="clientautherror" class="tsd-anchor"></a>
+					<h3>Client<wbr>Auth<wbr>Error</h3>
+					Re-exports <a href="../classes/_error_clientautherror_.clientautherror.html">ClientAuthError</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="clientconfigurationerror" class="tsd-anchor"></a>
+					<h3>Client<wbr>Configuration<wbr>Error</h3>
+					Re-exports <a href="../classes/_error_clientconfigurationerror_.clientconfigurationerror.html">ClientConfigurationError</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="configuration" class="tsd-anchor"></a>
+					<h3>Configuration</h3>
+					Re-exports <a href="_configuration_.html#configuration">Configuration</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="interactionrequiredautherror" class="tsd-anchor"></a>
+					<h3>Interaction<wbr>Required<wbr>Auth<wbr>Error</h3>
+					Re-exports <a href="../classes/_error_interactionrequiredautherror_.interactionrequiredautherror.html">InteractionRequiredAuthError</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="loglevel" class="tsd-anchor"></a>
+					<h3>Log<wbr>Level</h3>
+					Re-exports <a href="../enums/_logger_.loglevel.html">LogLevel</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="logger" class="tsd-anchor"></a>
+					<h3>Logger</h3>
+					Re-exports <a href="../classes/_logger_.logger.html">Logger</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="servererror" class="tsd-anchor"></a>
+					<h3>Server<wbr>Error</h3>
+					Re-exports <a href="../classes/_error_servererror_.servererror.html">ServerError</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="useragentapplication" class="tsd-anchor"></a>
+					<h3>User<wbr>Agent<wbr>Application</h3>
+					Re-exports <a href="../classes/_useragentapplication_.useragentapplication.html">UserAgentApplication</a>
+				</section>
+			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 			<nav class="tsd-navigation primary">
@@ -74,12 +167,51 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="_index_.html">"index"</a>
+						<a href="_index_.html">&quot;index&quot;</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#account" class="tsd-kind-icon">Account</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#autherror" class="tsd-kind-icon">Auth<wbr>Error</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#authresponse" class="tsd-kind-icon">Auth<wbr>Response</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#authenticationparameters" class="tsd-kind-icon">Authentication<wbr>Parameters</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#cachelocation" class="tsd-kind-icon">Cache<wbr>Location</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#clientautherror" class="tsd-kind-icon">Client<wbr>Auth<wbr>Error</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#clientconfigurationerror" class="tsd-kind-icon">Client<wbr>Configuration<wbr>Error</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#configuration" class="tsd-kind-icon">Configuration</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#interactionrequiredautherror" class="tsd-kind-icon">Interaction<wbr>Required<wbr>Auth<wbr>Error</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#loglevel" class="tsd-kind-icon">Log<wbr>Level</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#logger" class="tsd-kind-icon">Logger</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#servererror" class="tsd-kind-icon">Server<wbr>Error</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#useragentapplication" class="tsd-kind-icon">User<wbr>Agent<wbr>Application</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
@@ -97,6 +229,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -145,7 +278,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
