--- a/ref/msal-core/modules/_telemetry_apievent_.html
+++ b/ref/msal-core/modules/_telemetry_apievent_.html
@@ -100,86 +100,86 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>KEYS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L6">telemetry/ApiEvent.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L6">src/telemetry/ApiEvent.ts:6</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.api_error_code" class="tsd-anchor"></a>
 						<h3>API_<wbr>ERROR_<wbr>CODE</h3>
-						<div class="tsd-signature tsd-kind-icon">API_<wbr>ERROR_<wbr>CODE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;api_error_code&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">API_<wbr>ERROR_<wbr>CODE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;api_error_code&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L13">telemetry/ApiEvent.ts:13</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L13">src/telemetry/ApiEvent.ts:13</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.authority" class="tsd-anchor"></a>
 						<h3>AUTHORITY</h3>
-						<div class="tsd-signature tsd-kind-icon">AUTHORITY<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;authority&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">AUTHORITY<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;authority&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L7">telemetry/ApiEvent.ts:7</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L7">src/telemetry/ApiEvent.ts:7</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.authority_type" class="tsd-anchor"></a>
 						<h3>AUTHORITY_<wbr>TYPE</h3>
-						<div class="tsd-signature tsd-kind-icon">AUTHORITY_<wbr>TYPE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;authority_type&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">AUTHORITY_<wbr>TYPE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;authority_type&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L8">telemetry/ApiEvent.ts:8</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L8">src/telemetry/ApiEvent.ts:8</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.login_hint" class="tsd-anchor"></a>
 						<h3>LOGIN_<wbr>HINT</h3>
-						<div class="tsd-signature tsd-kind-icon">LOGIN_<wbr>HINT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;login_hint&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">LOGIN_<wbr>HINT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;login_hint&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L14">telemetry/ApiEvent.ts:14</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L14">src/telemetry/ApiEvent.ts:14</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.prompt" class="tsd-anchor"></a>
 						<h3>PROMPT</h3>
-						<div class="tsd-signature tsd-kind-icon">PROMPT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;ui_behavior&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">PROMPT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;ui_behavior&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L9">telemetry/ApiEvent.ts:9</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L9">src/telemetry/ApiEvent.ts:9</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.tenant_id" class="tsd-anchor"></a>
 						<h3>TENANT_<wbr>ID</h3>
-						<div class="tsd-signature tsd-kind-icon">TENANT_<wbr>ID<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;tenant_id&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">TENANT_<wbr>ID<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;tenant_id&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L10">telemetry/ApiEvent.ts:10</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L10">src/telemetry/ApiEvent.ts:10</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.user_id" class="tsd-anchor"></a>
 						<h3>USER_<wbr>ID</h3>
-						<div class="tsd-signature tsd-kind-icon">USER_<wbr>ID<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;user_id&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">USER_<wbr>ID<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;user_id&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L11">telemetry/ApiEvent.ts:11</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L11">src/telemetry/ApiEvent.ts:11</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.was_sucessful" class="tsd-anchor"></a>
 						<h3>WAS_<wbr>SUCESSFUL</h3>
-						<div class="tsd-signature tsd-kind-icon">WAS_<wbr>SUCESSFUL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;was_successful&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">WAS_<wbr>SUCESSFUL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;was_successful&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L12">telemetry/ApiEvent.ts:12</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L12">src/telemetry/ApiEvent.ts:12</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -193,7 +193,7 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="_telemetry_apievent_.html">"telemetry/<wbr>Api<wbr>Event"</a>
+						<a href="_telemetry_apievent_.html">&quot;telemetry/<wbr>Api<wbr>Event&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -228,6 +228,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -276,7 +277,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
