--- a/ref/msal-core/modules/_telemetry_httpevent_.html
+++ b/ref/msal-core/modules/_telemetry_httpevent_.html
@@ -93,116 +93,116 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>KEYS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L5">telemetry/HttpEvent.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L5">src/telemetry/HttpEvent.ts:5</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.api_version" class="tsd-anchor"></a>
 						<h3>API_<wbr>VERSION</h3>
-						<div class="tsd-signature tsd-kind-icon">API_<wbr>VERSION<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;api_version&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">API_<wbr>VERSION<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;api_version&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L9">telemetry/HttpEvent.ts:9</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L9">src/telemetry/HttpEvent.ts:9</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.http_method" class="tsd-anchor"></a>
 						<h3>HTTP_<wbr>METHOD</h3>
-						<div class="tsd-signature tsd-kind-icon">HTTP_<wbr>METHOD<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;http_method&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">HTTP_<wbr>METHOD<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;http_method&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L12">telemetry/HttpEvent.ts:12</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L12">src/telemetry/HttpEvent.ts:12</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.http_path" class="tsd-anchor"></a>
 						<h3>HTTP_<wbr>PATH</h3>
-						<div class="tsd-signature tsd-kind-icon">HTTP_<wbr>PATH<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;http_path&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">HTTP_<wbr>PATH<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;http_path&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L6">telemetry/HttpEvent.ts:6</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L6">src/telemetry/HttpEvent.ts:6</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.o_auth_error_code" class="tsd-anchor"></a>
 						<h3>O_<wbr>AUTH_<wbr>ERROR_<wbr>CODE</h3>
-						<div class="tsd-signature tsd-kind-icon">O_<wbr>AUTH_<wbr>ERROR_<wbr>CODE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;oauth_error_code&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">O_<wbr>AUTH_<wbr>ERROR_<wbr>CODE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;oauth_error_code&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L11">telemetry/HttpEvent.ts:11</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L11">src/telemetry/HttpEvent.ts:11</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.query_parameters" class="tsd-anchor"></a>
 						<h3>QUERY_<wbr>PARAMETERS</h3>
-						<div class="tsd-signature tsd-kind-icon">QUERY_<wbr>PARAMETERS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;query_parameters&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">QUERY_<wbr>PARAMETERS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;query_parameters&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L8">telemetry/HttpEvent.ts:8</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L8">src/telemetry/HttpEvent.ts:8</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.request_id_header" class="tsd-anchor"></a>
 						<h3>REQUEST_<wbr>ID_<wbr>HEADER</h3>
-						<div class="tsd-signature tsd-kind-icon">REQUEST_<wbr>ID_<wbr>HEADER<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;request_id_header&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">REQUEST_<wbr>ID_<wbr>HEADER<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;request_id_header&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L13">telemetry/HttpEvent.ts:13</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L13">src/telemetry/HttpEvent.ts:13</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.response_code" class="tsd-anchor"></a>
 						<h3>RESPONSE_<wbr>CODE</h3>
-						<div class="tsd-signature tsd-kind-icon">RESPONSE_<wbr>CODE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;response_code&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">RESPONSE_<wbr>CODE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;response_code&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L10">telemetry/HttpEvent.ts:10</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L10">src/telemetry/HttpEvent.ts:10</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.server_error_code" class="tsd-anchor"></a>
 						<h3>SERVER_<wbr>ERROR_<wbr>CODE</h3>
-						<div class="tsd-signature tsd-kind-icon">SERVER_<wbr>ERROR_<wbr>CODE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;server_error_code&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">SERVER_<wbr>ERROR_<wbr>CODE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;server_error_code&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L15">telemetry/HttpEvent.ts:15</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L15">src/telemetry/HttpEvent.ts:15</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.server_sub_error_code" class="tsd-anchor"></a>
 						<h3>SERVER_<wbr>SUB_<wbr>ERROR_<wbr>CODE</h3>
-						<div class="tsd-signature tsd-kind-icon">SERVER_<wbr>SUB_<wbr>ERROR_<wbr>CODE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;server_sub_error_code&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">SERVER_<wbr>SUB_<wbr>ERROR_<wbr>CODE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;server_sub_error_code&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L16">telemetry/HttpEvent.ts:16</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L16">src/telemetry/HttpEvent.ts:16</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.spe_info" class="tsd-anchor"></a>
 						<h3>SPE_<wbr>INFO</h3>
-						<div class="tsd-signature tsd-kind-icon">SPE_<wbr>INFO<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;spe_info&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">SPE_<wbr>INFO<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;spe_info&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L14">telemetry/HttpEvent.ts:14</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L14">src/telemetry/HttpEvent.ts:14</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.user_agent" class="tsd-anchor"></a>
 						<h3>USER_<wbr>AGENT</h3>
-						<div class="tsd-signature tsd-kind-icon">USER_<wbr>AGENT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;user_agent&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">USER_<wbr>AGENT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;user_agent&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L7">telemetry/HttpEvent.ts:7</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L7">src/telemetry/HttpEvent.ts:7</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -216,7 +216,7 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="_telemetry_httpevent_.html">"telemetry/<wbr>Http<wbr>Event"</a>
+						<a href="_telemetry_httpevent_.html">&quot;telemetry/<wbr>Http<wbr>Event&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -245,6 +245,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -293,7 +294,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
