--- a/ref/msal-core/modules/_telemetry_telemetrymanager_.html
+++ b/ref/msal-core/modules/_telemetry_telemetrymanager_.html
@@ -97,20 +97,20 @@
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
 					<a name="msal_cache_event_name" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagConst">Const</span> MSAL_<wbr>CACHE_<wbr>EVENT_<wbr>NAME</h3>
-					<div class="tsd-signature tsd-kind-icon">MSAL_<wbr>CACHE_<wbr>EVENT_<wbr>NAME<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"msal.cache_event"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;msal.cache_event&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">MSAL_<wbr>CACHE_<wbr>EVENT_<wbr>NAME<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"msal.cache_event"</span><span class="tsd-signature-symbol"> = &quot;msal.cache_event&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryManager.ts#L15">telemetry/TelemetryManager.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryManager.ts#L16">src/telemetry/TelemetryManager.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
 					<a name="msal_cache_event_value_prefix" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagConst">Const</span> MSAL_<wbr>CACHE_<wbr>EVENT_<wbr>VALUE_<wbr>PREFIX</h3>
-					<div class="tsd-signature tsd-kind-icon">MSAL_<wbr>CACHE_<wbr>EVENT_<wbr>VALUE_<wbr>PREFIX<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"msal.token"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;msal.token&quot;</span></div>
+					<div class="tsd-signature tsd-kind-icon">MSAL_<wbr>CACHE_<wbr>EVENT_<wbr>VALUE_<wbr>PREFIX<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"msal.token"</span><span class="tsd-signature-symbol"> = &quot;msal.token&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryManager.ts#L14">telemetry/TelemetryManager.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryManager.ts#L15">src/telemetry/TelemetryManager.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -127,7 +127,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryManager.ts#L17">telemetry/TelemetryManager.ts:17</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/TelemetryManager.ts#L18">src/telemetry/TelemetryManager.ts:18</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -149,7 +149,7 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="_telemetry_telemetrymanager_.html">"telemetry/<wbr>Telemetry<wbr>Manager"</a>
+						<a href="_telemetry_telemetrymanager_.html">&quot;telemetry/<wbr>Telemetry<wbr>Manager&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -184,6 +184,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -232,7 +233,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
