--- a/ref/msal-core/modules/_telemetry_uievent_.html
+++ b/ref/msal-core/modules/_telemetry_uievent_.html
@@ -93,26 +93,26 @@
 					<div class="tsd-signature tsd-kind-icon">EVENT_<wbr>KEYS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/UiEvent.ts#L4">telemetry/UiEvent.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/UiEvent.ts#L4">src/telemetry/UiEvent.ts:4</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.access_denied" class="tsd-anchor"></a>
 						<h3>ACCESS_<wbr>DENIED</h3>
-						<div class="tsd-signature tsd-kind-icon">ACCESS_<wbr>DENIED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;access_denied&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">ACCESS_<wbr>DENIED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;access_denied&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/UiEvent.ts#L6">telemetry/UiEvent.ts:6</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/UiEvent.ts#L6">src/telemetry/UiEvent.ts:6</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.user_cancelled" class="tsd-anchor"></a>
 						<h3>USER_<wbr>CANCELLED</h3>
-						<div class="tsd-signature tsd-kind-icon">USER_<wbr>CANCELLED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;prependEventNamePrefix(&quot;user_cancelled&quot;)</span></div>
+						<div class="tsd-signature tsd-kind-icon">USER_<wbr>CANCELLED<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;user_cancelled&quot;)</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/UiEvent.ts#L5">telemetry/UiEvent.ts:5</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/UiEvent.ts#L5">src/telemetry/UiEvent.ts:5</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -126,7 +126,7 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="_telemetry_uievent_.html">"telemetry/<wbr>UiEvent"</a>
+						<a href="_telemetry_uievent_.html">&quot;telemetry/<wbr>UiEvent&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -155,6 +155,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -203,7 +204,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
