--- a/ref/msal-core/modules/_useragentapplication_.__global.html
+++ b/ref/msal-core/modules/_useragentapplication_.__global.html
@@ -80,10 +80,10 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section tsd-is-not-exported">
+						<section class="tsd-index-section ">
 							<h3>Interfaces</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported"><a href="../interfaces/_useragentapplication_.__global.window.html" class="tsd-kind-icon">Window</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/_useragentapplication_.__global.window.html" class="tsd-kind-icon">Window</a></li>
 							</ul>
 						</section>
 					</div>
@@ -97,7 +97,7 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="_useragentapplication_.html">"<wbr>User<wbr>Agent<wbr>Application"</a>
+						<a href="_useragentapplication_.html">&quot;<wbr>User<wbr>Agent<wbr>Application&quot;</a>
 						<ul>
 							<li class="current tsd-kind-module tsd-parent-kind-external-module tsd-is-not-exported">
 								<a href="_useragentapplication_.__global.html">__global</a>
@@ -108,7 +108,7 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
+					<li class=" tsd-kind-interface tsd-parent-kind-module">
 						<a href="../interfaces/_useragentapplication_.__global.window.html" class="tsd-kind-icon">Window</a>
 					</li>
 				</ul>
@@ -128,6 +128,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -176,7 +177,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
