--- a/ref/msal-core/modules/_utils_constants_.html
+++ b/ref/msal-core/modules/_utils_constants_.html
@@ -107,7 +107,7 @@
 					<div class="tsd-signature tsd-kind-icon">Interaction<wbr>Type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"redirectInteraction"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"popupInteraction"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L136">utils/Constants.ts:136</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L136">src/utils/Constants.ts:136</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -124,7 +124,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L154">utils/Constants.ts:154</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L154">src/utils/Constants.ts:154</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -145,66 +145,66 @@
 					<div class="tsd-signature tsd-kind-icon">AADTrusted<wbr>Host<wbr>List<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L101">utils/Constants.ts:101</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L101">src/utils/Constants.ts:101</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="aadtrustedhostlist.login_chinacloudapi_cn" class="tsd-anchor"></a>
 						<h3>login.chinacloudapi.cn</h3>
-						<div class="tsd-signature tsd-kind-icon">login.chinacloudapi.cn<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;&quot;login.chinacloudapi.cn&quot;</span></div>
+						<div class="tsd-signature tsd-kind-icon">login.chinacloudapi.cn<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;login.chinacloudapi.cn&quot;</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L103">utils/Constants.ts:103</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L103">src/utils/Constants.ts:103</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="aadtrustedhostlist.login_cloudgovapi_us" class="tsd-anchor"></a>
 						<h3>login.cloudgovapi.us</h3>
-						<div class="tsd-signature tsd-kind-icon">login.cloudgovapi.us<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;&quot;login.cloudgovapi.us&quot;</span></div>
+						<div class="tsd-signature tsd-kind-icon">login.cloudgovapi.us<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;login.cloudgovapi.us&quot;</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L104">utils/Constants.ts:104</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L104">src/utils/Constants.ts:104</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="aadtrustedhostlist.login_microsoftonline_com" class="tsd-anchor"></a>
 						<h3>login.microsoftonline.com</h3>
-						<div class="tsd-signature tsd-kind-icon">login.microsoftonline.com<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;&quot;login.microsoftonline.com&quot;</span></div>
+						<div class="tsd-signature tsd-kind-icon">login.microsoftonline.com<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;login.microsoftonline.com&quot;</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L105">utils/Constants.ts:105</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L105">src/utils/Constants.ts:105</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="aadtrustedhostlist.login_microsoftonline_de" class="tsd-anchor"></a>
 						<h3>login.microsoftonline.de</h3>
-						<div class="tsd-signature tsd-kind-icon">login.microsoftonline.de<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;&quot;login.microsoftonline.de&quot;</span></div>
+						<div class="tsd-signature tsd-kind-icon">login.microsoftonline.de<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;login.microsoftonline.de&quot;</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L106">utils/Constants.ts:106</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L106">src/utils/Constants.ts:106</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="aadtrustedhostlist.login_microsoftonline_us" class="tsd-anchor"></a>
 						<h3>login.microsoftonline.us</h3>
-						<div class="tsd-signature tsd-kind-icon">login.microsoftonline.us<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;&quot;login.microsoftonline.us&quot;</span></div>
+						<div class="tsd-signature tsd-kind-icon">login.microsoftonline.us<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;login.microsoftonline.us&quot;</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L107">utils/Constants.ts:107</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L107">src/utils/Constants.ts:107</a></li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="aadtrustedhostlist.login_windows_net" class="tsd-anchor"></a>
 						<h3>login.windows.net</h3>
-						<div class="tsd-signature tsd-kind-icon">login.windows.net<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;&quot;login.windows.net&quot;</span></div>
+						<div class="tsd-signature tsd-kind-icon">login.windows.net<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;login.windows.net&quot;</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L102">utils/Constants.ts:102</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L102">src/utils/Constants.ts:102</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -218,7 +218,7 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="_utils_constants_.html">"utils/<wbr>Constants"</a>
+						<a href="_utils_constants_.html">&quot;utils/<wbr>Constants&quot;</a>
 					</li>
 				</ul>
 			</nav>
@@ -259,6 +259,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -307,7 +308,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
